[project]
  name = "pulumi_keycloak"
  description = "A Pulumi package for creating and managing keycloak cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "keycloak"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "5.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-keycloak"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_keycloak = ["py.typed", "pulumi-plugin.json"]
